syntax = "proto3";
package book;

option go_package = "./book";

message EmptyResponse {
  int32 status_code = 1;
}

message DeleteRequest {
  int64 book_id = 1;
}

message GetRequest {
  int64 book_id = 1;
}

message GetResponse {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string description = 4;
  string book_url = 5;
  optional string cover_url = 6;
  int32 status_code = 7;
}


message SearchRequest {
  string title = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message SearchItem {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string description = 4;
  string book_url = 5;
  optional string cover_url = 6;
}

message SearchResponse {
  repeated SearchItem items = 1;
  int32 statusCode = 2;
}

message UpdateRequest {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string description = 4;
  string book_url = 5;
  optional string cover_url = 6;
  repeated int64 authors_ids = 7;
  repeated int64 genres_ids = 8;
}

message CreateRequest {
  int64 user_id = 1;
  string title = 2;
  string description = 3;
  string book_url = 4;
  optional string cover_url = 5;
  repeated int64 authors_ids = 6;
  repeated int64 genres_ids = 7;
}

message CreateResponse {
  int64 book_id = 1;
  int32 status_code = 2;
}
